--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,14 @@
 name: Publish
 
 on:
-  workflow_dispatch:
-#  release:
-#    types: [created]
-#  push:
-#    branches:
-#    - main
-#  pull_request:
-#    branches:
-#    - main
+  release:
+    types: [created]
+  push:
+    branches:
+    - main
+  pull_request:
+    branches:
+    - main
 
 jobs:
   java_build:
@@ -46,7 +45,7 @@ jobs:
           echo -n "${{ secrets.OSSRH_GPG_SECRET_KEY }}" | base64 --decode | gpg --batch --import
           gpg --list-secret-keys --keyid-format LONG
           echo -n "${{ secrets.OSSRH_GPG_SECRET_KEY }}" | base64 --decode > $GITHUB_WORKSPACE/release.gpg
-#        if: github.event_name == 'release'
+        if: github.event_name == 'release'
 
       - name: Publish to Maven Central
         run: |
@@ -57,4 +56,4 @@ jobs:
         env:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-#        if: github.event_name == 'release'
+        if: github.event_name == 'release'
