--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,6 @@
 name: Publish
 
 on:
-  workflow_dispatch: 
   release:
     types: [created]
   push:
@@ -46,7 +45,7 @@ jobs:
           echo -n "${{ secrets.OSSRH_GPG_SECRET_KEY }}" | base64 --decode | gpg --batch --import
           gpg --list-secret-keys --keyid-format LONG
           echo -n "${{ secrets.OSSRH_GPG_SECRET_KEY }}" | base64 --decode > $GITHUB_WORKSPACE/release.gpg
-#        if: github.event_name == 'release'
+        if: github.event_name == 'release'
 
       - name: Publish to Maven Central
         run: |
@@ -57,4 +56,5 @@ jobs:
         env:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-#        if: github.event_name == 'release'
+          if: github.event_name == 'release'
+
