--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-provenance-protos = "1.13.0"
-provenance-hd-wallet = "0.1.15"
+apache-http = "4.5.13"
 bouncycastle = "1.70"
-grpc = "1.44.0"
+figuretech-hdwallet = "0.4.1"
+grpc = "1.55.1"
 kotlin = "1.6.10"
 kotlinx-core = "1.6.4"
-apache-http = "4.5.13"
+provenance-protos = "1.15.0"
 
 [libraries]
 kotlin = { module = "org.jetbrains.kotlin:kotlin-stdlib" }
@@ -16,6 +16,8 @@ kotlin-jdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8" }
 
 bouncycastle = { module = "org.bouncycastle:bcprov-jdk15on", version.ref = "bouncycastle" }
 
+figuretech-hdwallet = { module = "tech.figure.hdwallet:hdwallet", version.ref = "figuretech-hdwallet" }
+
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit" }
 
@@ -23,7 +25,6 @@ grpc-alts = { module = "io.grpc:grpc-alts", version.ref = "grpc" }
 grpc-netty = { module = "io.grpc:grpc-netty", version.ref = "grpc" }
 
 provenance-protos = { module = "io.provenance:proto-kotlin", version.ref = "provenance-protos" }
-provenance-hdwallet = { module = "io.provenance.hdwallet:hdwallet", version.ref = "provenance-hd-wallet" }
 
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-core" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-core" }
